--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 <!-- CSS Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>.portfolio-links {
+  background: rgba(0, 0, 0, 0.6);
+  padding: 15px;
+  border-radius: 10px;
+  text-align: center;
+}
 
+.portfolio-links a {
+  color: #fff;
+  text-decoration: none;
+}
+</style>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -31,7 +42,6 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -39,7 +49,6 @@
 </head>
 
 <body>
-
             <!-- ======= NAVBAR ======= -->
  <nav class="navbar navbar-expand-lg custom-navbar fixed-top bg-dark">
   <div class="container d-flex align-items-center justify-content-between">
@@ -101,7 +110,7 @@
                 <ul>
                   <li><i class="bi bi-camera-video"></i> <strong>Services:</strong> <span>Production vidéo & Motion design</span></li>
                   <li><i class="bi bi-broadcast"></i> <strong>Diffusion:</strong> <span>TV, Réseaux sociaux, Web</span></li>
-                  <li><i class="bi bi-geo-alt"></i> <strong>Localisation:</strong> <span>03 rue Beranger Feraud Immeuble CTIC Dakar</span></li>
+                  <li><i class="bi bi-geo-alt"></i> <strong>Localisation:</strong> <span> CTIC Dakar</span></li>
                   <li><i class="bi bi-phone"></i> <strong>Téléphone:</strong> <span>+221 33 842 49 00</span></li>
                 </ul>
               </div>
@@ -244,30 +253,30 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/IMG-20220617-WA0025.jpg" class="img-fluid" alt="">
+                <a href="assets/img/IMG-20220617-WA0027 (1).jpg" class="portfolio-lightbox" title="Voir l'image">
+                  <img src="assets/img/IMG-20220617-WA0027 (1).jpg" class="img-fluid" alt="">
+                </a>
               <div class="portfolio-links">
-                <a href="assets/img/IMG-20220617-WA0025.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/IMG-20220617-WA0027 (1).jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/IMG-20220617-WA0027 (1).jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="emissions/debattons.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/IMG-20220617-WA0027 (1).jpg" class="portfolio-lightbox" title="Voir l'image">
+                  <i class="bx bx-plus"></i>
+                </a>
+                <a href="emissions/debattons.html" title="More Details">
+                   ➤  détails 
+                </a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/sur.png" class="img-fluid" alt="">
+              <img src="assets/img/IMG-20220617-WA0027 (1).jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/sur.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="emissions/sur_les_pas.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/sur.png" class="portfolio-lightbox" title="Voir l'image">
+                  <i class="bx bx-plus"></i>
+                </a>
+                <a href="#" title="More Details">
+                   ➤  détails 
+                </a>
               </div>
             </div>
           </div>
